kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloappjava
  name: helloappjava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloappjava
  template:
    metadata:
      labels:
        app: helloappjava
    spec:
      containers:
      - image: ghcr.io/rajks24/helloappjava:2.0
        name: helloappjava
        ports:
        - containerPort: 80
