kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloappjava
  name: helloappjava
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: helloappjava
  type: LoadBalancer
