kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloappjava
spec:
  rules:
  - host: helloapp.apps.txvlab.local
    http:
      paths:
      - backend:
          service:
            name: helloappjava
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
